fix table overflow

--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,12 @@ h1 {
 }
 
 /*** Heatmap ***/
+#heatmap {
+  max-width: 100%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  word-wrap: break-word;
+}
 #heatmap-wrapper {
   max-width: 100%;
   overflow-y: hidden;
